# micro-redis

./: .gitignore  README.md  docker-compose.yml
newuser/: README.md  docker-compose.yml  pyproject.toml  pytest.ini
newuser/app/: new_user_service.py  redis_connection.py
newuser/tests/: test_new_user.py
store/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
store/app/: __init__.py
store/app/controllers/: cart_controller.py  home_controller.py  login_controller.py  signup_controller.py
store/app/static/css/: style.css
store/app/templates/: base.html  cart.html  index.html  login.html  signup.html
store/app/utility/: __init__.py  identity.py  session.py
store/tests/: test_app.py  test_session.py
weather/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
weather/app/: __init__.py  weather.py
weather/app/templates/: weather.html
weather/tests/: test_api.py  test_app.py  test_weather.py
weather/utility/: __init__.py
