[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Eric Preston <eric.preston@redis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
redis = "^4.5.5"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
